--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,9 +16,9 @@ resources:
   repositories:
     - repository: templates
       type:       github
-      name:       statisticsnorway/azure-pipelines-templates
+      name: descoped/azure-pipelines-templates
       ref:        refs/tags/0.0.7
-      endpoint:   statisticsnorway (6)
+      endpoint: descoped (6)
 
 # Pipeline will be run on this base image
 pool:
